<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RSSReader</string>
    <string name="categories">Categories</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_url">Enter URL</string>
    <string name="title_activity_feeds">Feeds</string>
    <string name="website_name">Name of website or blog</string>
    <string name="rss_link">Enter URL or RSS link</string>
    <string name="button_add_feed">Add Feed</string>
    <string name="button_cancel_feed">Cancel</string>
    <string name="menu_title_done">Done</string>
    <string name="menu_title_add">Add</string>
    <string name="title_activity_subscriptions">Subscriptions</string>
    <string name="title_activity_rssitems">RSSItemsActivity</string>
    <string name="title_activity_web_pager">Story</string>
    <string name="loading">Loading…</string>
    <string name="menu_title_search">Search</string>
    <string name="title_activity_settings">Settings</string>
    <string name="feed_settings">FEED SETTINGS</string>
    <string name="settings_ok">OK</string>
    <string name="menu_title_open_browser">Open in Browser</string>
    <string name="no_subscriptions">No Subscriptions. Please click on \'+\' to Subscribe</string>
    <string name="offline">App is in offline mode</string>
    <string name="share">Share</string>
    <string name="no_rss_link">Could not find RSS link for %1$s</string>
    <string name="no_articles">No Articles</string>
    <string name="title">Title:</string>
    <string name="url">URL:</string>
    <string name="custom_category_title">Custom Feeds</string>
    <string name="item_count_setting">Max Items per feed</string>
    <string name="no_offline_articles_message">Unable to fetch Articles.
                                               Please connect to Internet</string>
    <string name="no_offline_categories_message">Unable to fetch categories.
                                                 Please connect to internet</string>
    <string name="no_offline_feeds_message">Unable to fetch feeds.
                                            Please connect to internet</string>
    <string name="feed_title_error">Please give a title for the website or blog</string>
    <string name="feed_url_error">Please enter a valid url</string>
    <string name="network_error">Network Error</string>
    <string name="search_feed_offline_error">You need to be online to search for feed.
                                             Please check your internet connection</string>
    <string name="search_dialog_title">Searching</string>
    <string name="search_dialog_message">Please wait…</string>
    <string name="custom_subscription_success">Subscribed to %1$s</string>
    <string name="add_feed_offline_error">You need to be online to add subscriptions.
        Please check your internet connection</string>
    <string name="all_items">All Items</string>
    <string name="webView_offline_message">Page Not Available. Please connect to internet to view
    the article</string>

    <string-array name="feeds_count">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
        <item>All</item>
    </string-array>

    <string name="title_activity_cards">RSSReader</string>

</resources>
