<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="3dp"
    android:paddingStart="3dp"
    android:paddingRight="3dp"
    android:paddingEnd="3dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/innerLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/topLayout">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_weight="0.2"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/websiteName"
                android:hint="@string/website_name"
                android:imeOptions="actionNext"
            android:layout_weight="0.8"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topLayout"
            android:orientation="horizontal"
            android:id="@+id/belowLayout">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/url"
                android:layout_weight="0.2"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textWebEmailAddress"
                android:ems="10"
                android:id="@+id/inputLink"
                android:hint="@string/rss_link"
                android:imeOptions="actionDone"
                android:layout_weight="0.8"/>
        </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/buttonLayout"
        android:layout_below="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:weightSum="1">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_add_feed"
            android:id="@+id/addFeed"
            android:layout_weight="0.4975"
            android:theme="@android:style/Theme.Holo"
            android:textColor="#FFF"
            android:background="#33B5E5"/>
        <TextView
            android:id="@+id/centerView"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="0.005"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel_feed"
            android:id="@+id/cancelButton"
            android:theme="@android:style/Theme.Holo"
            android:layout_weight="0.4975"
            android:textColor="#FFF"
            android:background="#33B5E5"/>
    </LinearLayout>

    </RelativeLayout>
